--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -5,116 +5,105 @@
 {% block title %}Teams{% endblock title %}
 
 {% block content %}
-
-  {% if team_list %}
-    <!-- hero -->
-    <section class="hero">
-      <div class="hero-body">
-        <div class="container has-text-centered">
-          <h1 class="title is-3">Team{{ team_list.count|pluralize }} List</h1>
-        </div>
+{% if team_list %}
+<!-- header -->
+<header class="block has-text-centered">
+  <h1 class="title">Team{{ team_list.count|pluralize }} List</h1>
+</header>
+<!-- end header -->
+<!-- team list -->
+<section>
+  <!-- navigation -->
+  <nav class="level">
+    <!-- search box -->
+    <div class="level-left">
+      <div class="level-item">
+        <p class="subtitle is-5">
+          <strong>{{ page_obj.paginator.count }}</strong> Team{{ page_obj.paginator.count|pluralize }}
+        </p>
       </div>
-    </section>
-    <!-- end hero -->
-
-    <!-- team list -->
-    <section>
-      <div class="container">
-        <!-- navigation -->
-        <nav class="level">
-          <!-- search box -->
-          <div class="level-left">
-            <div class="level-item">
-              <p class="subtitle is-5">
-                <strong>{{ page_obj.paginator.count }}</strong> Team{{ page_obj.paginator.count|pluralize }}
-              </p>
-            </div>
-            <div class="level-item">
-              <form action="{% url 'team:search' %}" method="get" accept-charset="utf-8">
-                <div class="field has-addons">
-                  <p class="control">
-                    <input class="input" name="q" type="search" placeholder="Find a team">
-                  </p>
-                  <p class="control">
-                    <button class="button">Search</button>
-                  </p>
-                </div>
-              </form>
-            </div>
-          </div>
-          <!-- end search box -->
-          <!-- add button -->
-          <div class="level-right">
-            <p class="level-item">
-              {% if user.is_authenticated %}
-                <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
-                  <span class="icon is-small">
-                    <i class="fas fa-plus"></i>
-                  </span>
-                  <span>New</span>
-                </a>
-              {% endif %}
+      <div class="level-item">
+        <form action="{% url 'team:search' %}" method="get" accept-charset="utf-8">
+          <div class="field has-addons">
+            <p class="control">
+              <input class="input" name="q" type="search" placeholder="Find a team">
+            </p>
+            <p class="control">
+              <button class="button">Search</button>
             </p>
           </div>
-          <!-- end button -->
-        </nav>
-        <!-- end navigation -->
-
-        <!-- team columns -->
-        <div class="columns is-multiline">
-          {% for team in team_list %}
-            <div class="column is-one-quarter">
-              <!-- team card -->
-              <div class="card">
-                <!-- card header -->
-                <header class="card-header">
-                  <p class="card-header-title is-centered">{{ team }}</p>
-                </header>
-                <!-- end card header -->
-                <!-- card image -->
-                <div class="card-image">
-                  <figure class="image is-2by3">
-                    {% if team.image %}
-                      {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
-                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ team.name }}">
-                      {% endthumbnail %}
-                    {% else %}
-                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
-                    {% endif %}
-                  </figure>
-                </div>
-                <!-- end card image -->
-                <!-- card footer -->
-                <footer class="card-footer">
-                  {% with count=team.issue_count %}
-                    {% if count %}
-                      <a href="{% url 'team:issue' team.slug %}" class="card-footer-item">
-                        {{ count }} issue{{ count|pluralize }}
-                      </a>
-                    {% else %}
-                      <p class="card-footer-item">0 issues</p>
-                    {% endif %}
-                  {% endwith %}
-                  <a href="{% url 'team:detail' team.slug %}" class="card-footer-item">Info</a>
-                </footer>
-                <!-- end card footer -->
-              </div>
-              <!-- end team card -->
-            </div>
-          {% endfor %}
+        </form>
+      </div>
+    </div>
+    <!-- end search box -->
+    <!-- add button -->
+    <div class="level-right">
+      <p class="level-item">
+        {% if user.is_authenticated %}
+        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+          <span>New</span>
+        </a>
+        {% endif %}
+      </p>
+    </div>
+    <!-- end button -->
+  </nav>
+  <!-- end navigation -->
+  <!-- team columns -->
+  <div class="columns is-multiline">
+    {% for team in team_list %}
+    <div class="column is-one-quarter">
+      <!-- team card -->
+      <div class="card">
+        <!-- card header -->
+        <header class="card-header">
+          <p class="card-header-title is-centered">{{ team }}</p>
+        </header>
+        <!-- end card header -->
+        <!-- card image -->
+        <div class="card-image">
+          <figure class="image is-2by3">
+            {% if team.image %}
+              {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ team.name }}">
+              {% endthumbnail %}
+            {% else %}
+              <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
+            {% endif %}
+          </figure>
         </div>
-        <!-- end team columns -->
+        <!-- end card image -->
+        <!-- card footer -->
+        <footer class="card-footer">
+          {% with count=team.issue_count %}
+            {% if count %}
+            <a href="{% url 'team:issue' team.slug %}" class="card-footer-item">
+              {{ count }} issue{{ count|pluralize }}
+            </a>
+            {% else %}
+            <p class="card-footer-item">0 issues</p>
+            {% endif %}
+          {% endwith %}
+          <a href="{% url 'team:detail' team.slug %}" class="card-footer-item">Info</a>
+        </footer>
+        <!-- end card footer -->
       </div>
-    </section>
-    <!-- end team list -->
-  {% else %}
-    <section>
-      <div class="container">
-        <p>No Story Teams currently available. Do you want to create one?</p>
-        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
-      </div>
-    </section>
-  {% endif %}
+      <!-- end team card -->
+    </div>
+    {% endfor %}
+  </div>
+  <!-- end team columns -->
+</section>
+<!-- end team list -->
+{% else %}
+<section>
+  <p>No Story Teams currently available. Do you want to create one?</p>
+  <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
+</section>
+{% endif %}
 {% endblock %}
 
 {% block pagination %}
