--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -4,8 +4,7 @@
 {% load static %}
 
 {% block sitedesc %}
-<meta name="description"
-  content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
+<meta name="description" content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
 {% endblock %}
 {% block sitekeywords %}
 <meta name="keywords" content="Comics,Comic Book Database,API,REST">
@@ -13,49 +12,100 @@
 {% block title %}Metron{% endblock %}
 
 {% block content %}
+<!-- header-->
 <header class="block has-text-centered">
   <h1 class="title">Metron</h1>
   <h2 class="subtitle">Comic Book Database</h2>
 </header>
-
+<!-- end header-->
+<!-- icons -->
+<section class="level is-mobile">
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-book-open"></i></span></p>
+      <p class="heading">Comic Book Database</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-satellite-dish"></i></span></p>
+      <p class="heading">REST API</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-users"></i></span></p>
+      <p class="heading">Community</p>
+    </div>
+  </div>
+</section>
+<!-- end icons -->
 <!-- info -->
 <section class="tile is-ancestor">
-  <div class="tile is-parent">
-    <article class="tile is-child box">
+  <div class="tile is-7 is-parent is-vertical">
+    <article class="tile is-child notification is-info">
+      <div class="columns">
+        <div class="column is-narrow is-hidden-mobile">
+          <figure class="block is-w-xl">
+            <img src="{% static 'site/img/metron-300.png' %}" alt="Metron logo">
+          </figure>
+        </div>
+        <div>
+          <p class="title">What is Metron?</p>
+          <p class="content">
+            <strong>Metron</strong> is a community-based site whose goal is to build an open database with a
+            <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for
+            comic books.
+          </p>
+          <p class="content">
+            Currently the only comic book database the provides a REST API for users is
+            <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
+            the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
+            continued accessibility.
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="tile is-child notification is-danger">
+      <p class="title">Questions?</p>
+      <p class="content">
+        Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:
+      </p>
       <div class="content">
-        <p class="title">What is Metron?</p>
-        <p class="content">
-          <strong>Metron</strong> is a community-based site whose goal is to build an open database with a
-          <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comics.
-        </p>
-        <p class="title">Why was Metron started?</p>
-        <p class="content">Currently the only comic book database the provides a REST API for users is
-          <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
-          the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
-          continued accessibility.
-        </p>
-        <p class="title">Want to join?</p>
-        <p class="content">
-          Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing 
-          Guidelines</a> before adding information to the database.
-        </p>
-        <p class="title">Want to use Metron's API?</p>
-        <p class="content">
-          If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called 
-          <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
-        </p>
-        <p class="title">Need to tag your comic archives?</p>
-        <p class="content">
-          If you wish to tag your comic archives with metadata from Metron, head over Github
-          and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.
-        </p>
-        <p class="title">Questions?</p>
-        <p class="content">Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:</p>
         <ul>
           <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
           <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
         </ul>
       </div>
+    </article>
+  </div>
+  <div class="tile is-5 is-parent is-vertical">
+    <article class="tile is-child notification is-primary">
+      <p class="title">Want to Contribute?</p>
+      <p class="content">
+        If you want to add information to Metron, sign-up for an account and read the 
+        <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a> 
+        before starting.
+      </p>
+      <p class="content">
+        Want to help with the technical side of Metron? Metron is built with 
+        <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of 
+        Python and Django head over to <a href="https://github.com/bpepple/metron">Github</a> 
+        to checkout the sites code.
+      </p>
+    </article>
+    <article class="tile is-child notification is-warning">
+      <p class="title">Using the REST API</p>
+      <p class="content">
+        If you want to use the data from Metron, there is a 
+        <a href="https://www.python.org/">Python</a> wrapper called 
+        <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> 
+        to make it easy to use the API.
+      </p>
+      <p class="content">
+        Want to tag your comic archives with metadata from Metron? Head over Github
+        and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.
+      </p>
     </article>
   </div>
 </section>
