Tweak home page template

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -4,7 +4,8 @@
 {% load static %}
 
 {% block sitedesc %}
-<meta name="description" content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
+<meta name="description"
+  content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
 {% endblock %}
 {% block sitekeywords %}
 <meta name="keywords" content="Comics,Comic Book Database,API,REST">
@@ -19,7 +20,7 @@
 </header>
 <!-- end header-->
 <!-- icons -->
-<section class="level is-mobile">
+<div class="level is-mobile">
   <div class="level-item has-text-centered">
     <div>
       <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-book-open"></i></span></p>
@@ -38,10 +39,10 @@
       <p class="heading">Community</p>
     </div>
   </div>
-</section>
+</div>
 <!-- end icons -->
 <!-- info -->
-<section class="tile is-ancestor">
+<div class="tile is-ancestor">
   <div class="tile is-7 is-parent is-vertical">
     <article class="tile is-child notification is-info">
       <div class="columns">
@@ -59,9 +60,9 @@
           </p>
           <p class="content">
             Currently the only comic book database the provides a REST API for users is
-            <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
-            the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
-            continued accessibility.
+            <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned
+            service, the community that uses it has no control over the amount of resources provided to maintain it
+            or ensure it's continued accessibility.
           </p>
         </div>
       </div>
@@ -83,23 +84,23 @@
     <article class="tile is-child notification is-primary">
       <p class="title">Want to Contribute?</p>
       <p class="content">
-        If you want to add information to Metron, sign-up for an account and read the 
-        <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a> 
+        If you want to add information to Metron, sign-up for an account and read the
+        <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a>
         before starting.
       </p>
       <p class="content">
-        Want to help with the technical side of Metron? Metron is built with 
-        <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of 
-        Python and Django head over to <a href="https://github.com/bpepple/metron">Github</a> 
+        Want to help with the technical side of Metron? Metron is built with
+        <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of
+        Python and Django head over to <a href="https://github.com/bpepple/metron">Github</a>
         to checkout the sites code.
       </p>
     </article>
     <article class="tile is-child notification is-warning">
       <p class="title">Using the REST API</p>
       <p class="content">
-        If you want to use the data from Metron, there is a 
-        <a href="https://www.python.org/">Python</a> wrapper called 
-        <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> 
+        If you want to use the data from Metron, there is a
+        <a href="https://www.python.org/">Python</a> wrapper called
+        <a href="https://github.com/Metron-Project/mokkari">Mokkari</a>
         to make it easy to use the API.
       </p>
       <p class="content">
@@ -108,10 +109,10 @@
       </p>
     </article>
   </div>
-</section>
+</div>
 <!-- end info-->
 <!-- recently edited issues -->
-<section class="box">
+<div>
   <column>
     <!-- issue columns -->
     <div class="columns is-multiline">
@@ -132,11 +133,11 @@
           <div class="card-image">
             <figure class="image is-2by3">
               {% if issue.image %}
-              {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
-              {% endthumbnail %}
+                {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
+                {% endthumbnail %}
               {% else %}
-              <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+                <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
               {% endif %}
             </figure>
           </div>
@@ -154,6 +155,6 @@
     </div>
     <!-- end issue columns -->
   </column>
-</section>
-<!-- end recent issues -->
+</div>
+  <!-- end recent issues -->
 {% endblock %}
