Add mouse over text for rating short descriptions

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -372,7 +372,7 @@
           <p><b>Page Count:</b> {{ issue.page }}</p>
         {% endif %}
         <!-- Ratings are alway present -->
-        <p><b>Rating:</b> {{ issue.rating.name }}</p>
+        <p><b>Rating:</b> <span title="{{ issue.rating.short_description }}">{{ issue.rating.name }}</span></p>
         {% if issue.sku %}
           <p><b>Distributor SKU:</b> {{ issue.sku }}</p>
         {% endif %}
