Add help text for Role widget

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -59,7 +59,11 @@
         <thead>
           <tr>
             <th>Creator</th>
-            <th>Role</th>
+            <th>
+              <span title="Hold down “Control”, or “Command” on a Mac, to select more than one.">
+              Role <i class="fas fa-question-circle"></i>
+              </span>
+            </th>
             <th>Delete</th>
           </tr>
         </thead>
