Add link for privacy policy

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -113,6 +113,12 @@
             </span>
             <span>Blog</span>
           </a>
+          <a class="navbar-item" href="{% url 'flatpage:privacy' %}">
+            <span class="icon">
+              <i class="fas fa-user-secret"></i>
+            </span>
+            <span>Privacy Policy</span>
+          </a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">
             <span class="icon">
