Disable signups temporarily

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -175,7 +175,7 @@
       </div>
       {% else %}
       <div class="navbar-item">
-        <a class="button is-primary" href="{% url 'signup' %}">
+        <a class="button is-primary" disabled>
           <span class="icon">
             <i class="fas fa-user-plus"></i>
           </span>
