Add admin email to question tile

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -105,6 +105,7 @@
         <ul>
           <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
           <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
+          <li><a href="mailto:bpepple@metron.cloud">Email Site Admin</a></li>
         </ul>
       </div>
     </article>
