--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -181,7 +181,7 @@
       </div>
       {% else %}
       <div class="navbar-item">
-        <a class="button is-primary" disabled>
+        <a class="button is-primary" href="{% url 'signup' %}">
           <span class="icon">
             <i class="fas fa-user-plus"></i>
           </span>
