--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -141,7 +141,7 @@
           <i class="fab fa-lg fa-github"></i>
         </span>
       </a>
-      <a class="navbar-item" href="https://mastodon.social/@metron" target="_blank">
+      <a class="navbar-item" rel="me" href="https://mastodon.social/@metron" target="_blank">
         <span class="icon">
           <i class="fab fa-lg fa-mastodon"></i>
         </span>
